# CS-503-FM-Homework

./: .gitignore  README.md  pyproject.toml  run_training.py  setup_env.sh  submit_job.sh  submit_job_multi_node_scitas.sh
cfgs/nano4M/: multiclevr_d6-6w512.yaml
cfgs/nanoGPT/: mnist_d8w512.yaml  tinystories_d8w512.yaml
cfgs/nanoMaskGIT/: mnist_d8w512.yaml  tinystories_d8w512.yaml
nanofm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nanofm/data/: utils.py
nanofm/data/multimodal/: __init__.py  masking.py  simple_multimodal_dataset.py  utils.py
nanofm/data/text/: huggingface_datasets.py
nanofm/data/vision/: tokenized_mnist.py
nanofm/modeling/: transformer_layers.py  transformer_layers0.py
nanofm/models/: fourm.py  gpt.py  maskgit.py
nanofm/utils/: __init__.py  checkpoint.py  dist.py  logger.py  native_scaler.py  optim_factory.py  run_name.py  sampling.py  scheduler.py
notebooks/: CS503_FM_part1_nanoGPT (1).ipynb  CS503_FM_part1_nanoGPT.ipynb  CS503_FM_part2_nanoMaskGIT (1).ipynb  CS503_FM_part2_nanoMaskGIT.ipynb  CS503_FM_part3_nano4M.ipynb
